; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ieee802154/extr_cc2520.c_cc2520_sfd_isr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ieee802154/extr_cc2520.c_cc2520_sfd_isr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cc2520_private = type { %struct.TYPE_2__*, i32, i32, i64 }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"SFD for TX\0A\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"SFD for RX\0A\00", align 1
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @cc2520_sfd_isr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cc2520_sfd_isr(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.cc2520_private*, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.cc2520_private*
  store %struct.cc2520_private* %8, %struct.cc2520_private** %5, align 8
  %9 = load %struct.cc2520_private*, %struct.cc2520_private** %5, align 8
  %10 = getelementptr inbounds %struct.cc2520_private, %struct.cc2520_private* %9, i32 0, i32 1
  %11 = load i64, i64* %6, align 8
  %12 = call i32 @spin_lock_irqsave(i32* %10, i64 %11)
  %13 = load %struct.cc2520_private*, %struct.cc2520_private** %5, align 8
  %14 = getelementptr inbounds %struct.cc2520_private, %struct.cc2520_private* %13, i32 0, i32 3
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %32

17:                                               ; preds = %2
  %18 = load %struct.cc2520_private*, %struct.cc2520_private** %5, align 8
  %19 = getelementptr inbounds %struct.cc2520_private, %struct.cc2520_private* %18, i32 0, i32 3
  store i64 0, i64* %19, align 8
  %20 = load %struct.cc2520_private*, %struct.cc2520_private** %5, align 8
  %21 = getelementptr inbounds %struct.cc2520_private, %struct.cc2520_private* %20, i32 0, i32 1
  %22 = load i64, i64* %6, align 8
  %23 = call i32 @spin_unlock_irqrestore(i32* %21, i64 %22)
  %24 = load %struct.cc2520_private*, %struct.cc2520_private** %5, align 8
  %25 = getelementptr inbounds %struct.cc2520_private, %struct.cc2520_private* %24, i32 0, i32 0
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = call i32 @dev_dbg(i32* %27, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %29 = load %struct.cc2520_private*, %struct.cc2520_private** %5, align 8
  %30 = getelementptr inbounds %struct.cc2520_private, %struct.cc2520_private* %29, i32 0, i32 2
  %31 = call i32 @complete(i32* %30)
  br label %42

32:                                               ; preds = %2
  %33 = load %struct.cc2520_private*, %struct.cc2520_private** %5, align 8
  %34 = getelementptr inbounds %struct.cc2520_private, %struct.cc2520_private* %33, i32 0, i32 1
  %35 = load i64, i64* %6, align 8
  %36 = call i32 @spin_unlock_irqrestore(i32* %34, i64 %35)
  %37 = load %struct.cc2520_private*, %struct.cc2520_private** %5, align 8
  %38 = getelementptr inbounds %struct.cc2520_private, %struct.cc2520_private* %37, i32 0, i32 0
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = call i32 @dev_dbg(i32* %40, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0))
  br label %42

42:                                               ; preds = %32, %17
  %43 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %43
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @dev_dbg(i32*, i8*) #1

declare dso_local i32 @complete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
